--- a/Resources/Prototypes/Entities/Objects/Specific/Medical/surgery.yml
+++ b/Resources/Prototypes/Entities/Objects/Specific/Medical/surgery.yml
@@ -160,6 +160,8 @@
     damage:
       types:
         Slash: 12
+  - type: Scalpel # GoobStation
+    speed: 1.25
 
 - type: entity
   name: laser scalpel
@@ -171,6 +173,9 @@
     state: laser
   - type: Item
     heldPrefix: laser
+  - type: Scalpel # GoobStation
+    speed: 1.5
+  # TODO: prevent bleeding from incisions
 
 # Scissors
 
@@ -247,6 +252,8 @@
     endSound:
       path: /Audio/_Shitmed/Medical/Surgery/hemostat1.ogg
   - type: Hemostat
+  - type: Tweezers # GoobStation
+  - type: Tending # GoobStation
 
 # Bone setter - Shitmed Change
 - type: entity
@@ -343,6 +350,8 @@
     speedModifier: 0.5
   - type: ThrowingAngle # imp
     angle: 90
+  - type: BoneSaw # GoobStation
+    speed: 0.5
 
 - type: entity
   name: circular saw
@@ -371,6 +380,8 @@
   - type: ThrowingAngle
     angle: 90
   # end imp edits #
+  - type: BoneSaw # GoobStation
+    speed: 1.5
 
 - type: entity
   name: advanced circular saw
@@ -386,6 +397,8 @@
     attackRate: 1.5
   - type: Tool
     speedModifier: 2.0
+  - type: BoneSaw # GoobStation
+    speed: 2
 
 # ORGANS - SHITMED
 
