--- a/Resources/Prototypes/Entities/Objects/Tools/tools.yml
+++ b/Resources/Prototypes/Entities/Objects/Tools/tools.yml
@@ -45,6 +45,19 @@
   - type: StaticPrice
     price: 30
   - type: DamageOtherOnHit # imp
+  - type: Retractor # GoobStation
+    speed: 0.35
+  - type: Hemostat # GoobStation
+    speed: 0.6
+  - type: SurgeryTool # GoobStation
+    startSound:
+      path: /Audio/Items/wirecutter.ogg
+      params:
+        variation: 0.125
+    endSound:
+      path: /Audio/Items/wirecutter.ogg
+      params:
+        variation: 0.125
 
 - type: entity
   name: screwdriver
@@ -100,6 +113,15 @@
     removalTime: 1
   - type: EmbedPassiveDamage
   # end imp edits #
+  - type: Retractor # GoobStation
+    speed: 0.45
+  - type: Tending # GoobStation
+    speed: 0.65
+  - type: SurgeryTool # GoobStation
+    startSound:
+      collection: Screwdriver
+    endSound:
+      path: /Audio/_Shitmed/Medical/Surgery/retractor2.ogg
 
 - type: entity
   name: wrench
