--- a/Resources/Prototypes/Entities/Objects/Misc/utensils.yml
+++ b/Resources/Prototypes/Entities/Objects/Misc/utensils.yml
@@ -8,6 +8,13 @@
   - type: Item # TODO add inhand sprites for all utensils
     sprite: Objects/Misc/utensils.rsi
   - type: SpaceGarbage
+  - type: Tweezers # GoobStation: Any utensil can poorly remove organs
+    speed: 0.2
+  - type: SurgeryTool # GoobStation
+    startSound:
+      path: /Audio/_Shitmed/Medical/Surgery/retractor1.ogg
+    endSound:
+      path: /Audio/_Shitmed/Medical/Surgery/hemostat1.ogg
 
 - type: entity
   parent: UtensilBase
@@ -64,6 +71,8 @@
   - type: ThrowingAngle
     angle: 180
   # end imp edits #
+  - type: Tweezers # GoobStation: Forks are better than spoons
+    speed: 0.35
 
 - type: entity
   parent: UtensilBasePlastic
@@ -76,6 +85,8 @@
   - type: Utensil
     types:
     - Fork
+  - type: Tweezers # GoobStation: Forks are better than spoons
+    speed: 0.35
 
 - type: entity
   parent: UtensilBase
