--- a/Resources/Prototypes/Entities/Objects/Weapons/Melee/chainsaw.yml
+++ b/Resources/Prototypes/Entities/Objects/Weapons/Melee/chainsaw.yml
@@ -47,3 +47,10 @@
         maxVol: 300
   - type: UseDelay
     delay: 1
+  - type: BoneSaw # GoobStation
+    speed: 0.5 # TODO: arm-mounted version becomes 0.65
+  - type: SurgeryTool # GoobStation
+    startSound:
+      path: /Audio/Weapons/chainsawwield.ogg
+    endSound:
+      path: /Audio/Weapons/chainsaw.ogg
