--- a/Resources/Prototypes/Body/Organs/slime.yml
+++ b/Resources/Prototypes/Body/Organs/slime.yml
@@ -48,7 +48,7 @@
     layers:
       - state: lung-l-slime
       - state: lung-r-slime
-  - type: Organ # GoobStation
+  - type: Organ # Shitmed
     slotId: lungs
   - type: Lung
     alert: LowNitrogen
