--- a/Resources/Prototypes/Entities/Objects/Specific/Hydroponics/tools.yml
+++ b/Resources/Prototypes/Entities/Objects/Specific/Hydroponics/tools.yml
@@ -48,11 +48,11 @@
     storedRotation: -90
   - type: DamageOtherOnHit # imp
     staminaCost: 5
-  - type: Retractor # GoobStation: Same as wirecutters
+  - type: Retractor # Shitmed: Same as wirecutters
     speed: 0.35
   - type: Hemostat
     speed: 0.6
-  - type: SurgeryTool # GoobStation
+  - type: SurgeryTool # Shitmed
     startSound:
       path: /Audio/_Shitmed/Medical/Surgery/retractor1.ogg
     endSound:
@@ -121,9 +121,9 @@
     sound: /Audio/Weapons/star_hit.ogg
   - type: EmbedPassiveDamage
   # end imp edits #
-  - type: BoneSaw # GoobStation
+  - type: BoneSaw # Shitmed
     speed: 0.35
-  - type: SurgeryTool # GoobStation
+  - type: SurgeryTool # Shitmed
     startSound:
       path: /Audio/_Shitmed/Medical/Surgery/saw.ogg
 
