--- a/Resources/Prototypes/Entities/Objects/Tools/lighters.yml
+++ b/Resources/Prototypes/Entities/Objects/Tools/lighters.yml
@@ -100,9 +100,9 @@
   - type: ItemTogglePointLight
   - type: ItemToggleDamageOtherOnHit # imp
   - type: DamageOtherOnHit
-  - type: Cautery # GoobStation
+  - type: Cautery # Shitmed
     speed: 0.45
-  - type: SurgeryTool # GoobStation
+  - type: SurgeryTool # Shitmed
     startSound:
       collection: lighterOnSounds
     endSound:
