--- a/Resources/Prototypes/Entities/Objects/Tools/tools.yml
+++ b/Resources/Prototypes/Entities/Objects/Tools/tools.yml
@@ -45,11 +45,11 @@
   - type: StaticPrice
     price: 30
   - type: DamageOtherOnHit # imp
-  - type: Retractor # GoobStation
+  - type: Retractor # Shitmed
     speed: 0.35
-  - type: Hemostat # GoobStation
+  - type: Hemostat # Shitmed
     speed: 0.6
-  - type: SurgeryTool # GoobStation
+  - type: SurgeryTool # Shitmed
     startSound:
       path: /Audio/Items/wirecutter.ogg
       params:
@@ -113,11 +113,11 @@
     removalTime: 1
   - type: EmbedPassiveDamage
   # end imp edits #
-  - type: Retractor # GoobStation
+  - type: Retractor # Shitmed
     speed: 0.45
-  - type: Tending # GoobStation
+  - type: Tending # Shitmed
     speed: 0.65
-  - type: SurgeryTool # GoobStation
+  - type: SurgeryTool # Shitmed
     startSound:
       collection: Screwdriver
     endSound:
