--- a/Resources/Prototypes/Entities/Objects/Tools/welders.yml
+++ b/Resources/Prototypes/Entities/Objects/Tools/welders.yml
@@ -120,9 +120,9 @@
         Blunt: 8
     staminaCost: 7.5
   # end imp edits #
-  - type: Cautery # GoobStation
+  - type: Cautery # Shitmed
     speed: 0.7
-  - type: SurgeryTool # GoobStation
+  - type: SurgeryTool # Shitmed
     startSound:
       collection: Welder
     endSound:
