--- a/Resources/Prototypes/Body/Parts/silicon.yml
+++ b/Resources/Prototypes/Body/Parts/silicon.yml
@@ -27,6 +27,14 @@
     guides:
     - Cyborgs
     - Robotics
+  # Shitmed Change Start
+  - type: SurgeryTool
+    startSound:
+      path: /Audio/_Shitmed/Medical/Surgery/organ1.ogg
+    endSound:
+      path: /Audio/_Shitmed/Medical/Surgery/organ2.ogg
+  - type: Gibbable
+  # Shitmed Change End
 
 - type: entity
   id: LeftArmBorg
@@ -34,7 +42,7 @@
   name: cyborg left arm
   components:
   - type: BodyPart
-    partType: Hand
+    partType: Arm # Shitmed Change
     symmetry: Left
   - type: Sprite
     state: borg_l_arm
@@ -52,7 +60,7 @@
   name: cyborg right arm
   components:
   - type: BodyPart
-    partType: Hand
+    partType: Arm # Shitmed Change
     symmetry: Right
   - type: Sprite
     state: borg_r_arm
@@ -81,6 +89,7 @@
     - Trash
     - BorgLeg
     - BorgLLeg
+  - type: MovementBodyPart # Shitmed Change
 
 - type: entity
   id: RightLegBorg
@@ -99,6 +108,7 @@
     - Trash
     - BorgLeg
     - BorgRLeg
+  - type: MovementBodyPart # Shitmed Change
 
 - type: entity
   id: LightHeadBorg
