--- a/Resources/Prototypes/Entities/Mobs/NPCs/animals.yml
+++ b/Resources/Prototypes/Entities/Mobs/NPCs/animals.yml
@@ -545,7 +545,7 @@
     - Mouse
   - type: Body
     prototype: Mothroach
-  - type: SurgeryTarget # GoobStation
+  - type: SurgeryTarget # Shitmed
   - type: TypingIndicator
     proto: moth
   - type: Destructible
@@ -564,7 +564,7 @@
     interfaces:
       enum.StrippingUiKey.Key:
         type: StrippableBoundUserInterface
-      enum.SurgeryUIKey.Key: # GoobStation
+      enum.SurgeryUIKey.Key: # Shitmed
         type: SurgeryBui
   - type: InventorySlots
   - type: Inventory
@@ -852,8 +852,8 @@
     - Passive
   - type: Body
     prototype: AnimalRuminant
-  - type: SurgeryTarget # GoobStation
-  - type: UserInterface # GoobStation
+  - type: SurgeryTarget # Shitmed
+  - type: UserInterface # Shitmed
     interfaces:
       enum.SurgeryUIKey.Key:
         type: SurgeryBui
@@ -934,8 +934,8 @@
       task: RuminantCompound
   - type: Body
     prototype: AnimalHemocyanin
-  - type: SurgeryTarget # GoobStation
-  - type: UserInterface # GoobStation
+  - type: SurgeryTarget # Shitmed
+  - type: UserInterface # Shitmed
     interfaces:
       enum.SurgeryUIKey.Key:
         type: SurgeryBui
@@ -1026,8 +1026,8 @@
     - Passive
   - type: Body
     prototype: AnimalRuminant
-  - type: SurgeryTarget # GoobStation
-  - type: UserInterface # GoobStation
+  - type: SurgeryTarget # Shitmed
+  - type: UserInterface # Shitmed
     interfaces:
       enum.SurgeryUIKey.Key:
         type: SurgeryBui
@@ -1250,8 +1250,8 @@
   - type: VentCrawler
     enterDelay: 3
   - type: CombatMode
-  - type: SurgeryTarget # GoobStation
-  - type: Targeting # GoobStation
+  - type: SurgeryTarget # Shitmed
+  - type: Targeting # Shitmed
   - type: Inventory
     templateId: monkey
     speciesId: monkey
@@ -1306,7 +1306,7 @@
   - type: Body
     prototype: Primate
     requiredLegs: 1 # TODO: More than 1 leg
-  - type: UserInterface # GoobStation: Add SurgeryUIKey on top of stripping ui
+  - type: UserInterface # Shitmed: Add SurgeryUIKey on top of stripping ui
     interfaces:
       enum.StrippingUiKey.Key:
         type: StrippableBoundUserInterface
@@ -1647,8 +1647,8 @@
     enterDelay: 1
   - type: Body
     prototype: Mouse
-  - type: SurgeryTarget # GoobStation
-  - type: UserInterface # GoobStation
+  - type: SurgeryTarget # Shitmed
+  - type: UserInterface # Shitmed
     interfaces:
       enum.SurgeryUIKey.Key:
         type: SurgeryBui
@@ -2408,8 +2408,8 @@
   - type: CombatMode
   - type: Body
     prototype: AnimalHemocyanin
-  - type: SurgeryTarget # GoobStation
-  - type: UserInterface # GoobStation
+  - type: SurgeryTarget # Shitmed
+  - type: UserInterface # Shitmed
     interfaces:
       enum.SurgeryUIKey.Key:
         type: SurgeryBui
