--- a/Resources/Prototypes/Entities/Mobs/NPCs/regalrat.yml
+++ b/Resources/Prototypes/Entities/Mobs/NPCs/regalrat.yml
@@ -61,8 +61,8 @@
   - type: Body
     prototype: Rat
     requiredLegs: 1 # TODO: More than 1 leg
-  - type: SurgeryTarget # GoobStation
-  - type: UserInterface # GoobStation
+  - type: SurgeryTarget # Shitmed
+  - type: UserInterface # Shitmed
     interfaces:
       enum.SurgeryUIKey.Key:
         type: SurgeryBui
@@ -250,8 +250,8 @@
   - type: Body
     prototype: Rat
     requiredLegs: 1 # TODO: More than 1 leg
-  - type: SurgeryTarget # GoobStation
-  - type: UserInterface # GoobStation
+  - type: SurgeryTarget # Shitmed
+  - type: UserInterface # Shitmed
     interfaces:
       enum.SurgeryUIKey.Key:
         type: SurgeryBui
