--- a/Resources/Prototypes/Entities/Objects/Materials/shards.yml
+++ b/Resources/Prototypes/Entities/Objects/Materials/shards.yml
@@ -83,9 +83,9 @@
     autoRemoveDuration: 30
   - type: EmbedPassiveDamage
   # end imp edits #
-  - type: Scalpel # GoobStation
+  - type: Scalpel # Shitmed
     speed: 0.45
-  - type: SurgeryTool # GoobStation
+  - type: SurgeryTool # Shitmed
     startSound:
       path: /Audio/_Shitmed/Medical/Surgery/scalpel1.ogg
     endSound:
