--- a/Resources/Prototypes/Entities/Objects/Tools/crowbars.yml
+++ b/Resources/Prototypes/Entities/Objects/Tools/crowbars.yml
@@ -44,9 +44,9 @@
     - 0,0,0,1
   - type: DamageOtherOnHit # imp
     staminaCost: 6
-  - type: Tweezers # GoobStation
+  - type: Tweezers # Shitmed
     speed: 0.55
-  - type: SurgeryTool # GoobStation
+  - type: SurgeryTool # Shitmed
     startSound: /Audio/Items/crowbar.ogg
 
 # Standard (grey) Crowbar
