--- a/Resources/Prototypes/Entities/Objects/Weapons/Melee/chainsaw.yml
+++ b/Resources/Prototypes/Entities/Objects/Weapons/Melee/chainsaw.yml
@@ -47,9 +47,9 @@
         maxVol: 300
   - type: UseDelay
     delay: 1
-  - type: BoneSaw # GoobStation
+  - type: BoneSaw # Shitmed
     speed: 0.5 # TODO: arm-mounted version becomes 0.65
-  - type: SurgeryTool # GoobStation
+  - type: SurgeryTool # Shitmed
     startSound:
       path: /Audio/Weapons/chainsawwield.ogg
     endSound:
