--- a/Resources/Prototypes/Entities/Objects/Weapons/Melee/e_sword.yml
+++ b/Resources/Prototypes/Entities/Objects/Weapons/Melee/e_sword.yml
@@ -85,11 +85,11 @@
     embedOnThrow: false
   - type: EmbedPassiveDamage
   # end imp edits #
-  - type: Scalpel # GoobStation
+  - type: Scalpel # Shitmed
     speed: 0.75
-  - type: Cautery # GoobStation: you have to be very, very careful to cauterize with it
+  - type: Cautery # Shitmed: you have to be very, very careful to cauterize with it
     speed: 0.2
-  - type: SurgeryTool # GoobStation
+  - type: SurgeryTool # Shitmed
     startSound:
       path: /Audio/Weapons/ebladehum.ogg
     endSound:
