--- a/Resources/Prototypes/Entities/Objects/Weapons/Melee/fireaxe.yml
+++ b/Resources/Prototypes/Entities/Objects/Weapons/Melee/fireaxe.yml
@@ -58,11 +58,11 @@
   - type: ThrowingAngle
     angle: 45
   # end imp edits #
-  - type: Scalpel # GoobStation
+  - type: Scalpel # Shitmed
     speed: 0.3
-  - type: BoneSaw # GoobStation
+  - type: BoneSaw # Shitmed
     speed: 0.5
-  - type: SurgeryTool # GoobStation
+  - type: SurgeryTool # Shitmed
     startSound:
       path: /Audio/_Shitmed/Medical/Surgery/saw.ogg
 
