--- a/Resources/Prototypes/Entities/Objects/Weapons/Melee/knife.yml
+++ b/Resources/Prototypes/Entities/Objects/Weapons/Melee/knife.yml
@@ -34,9 +34,9 @@
     sound: /Audio/Weapons/star_hit.ogg
   - type: EmbedPassiveDamage
   # end imp edits #
-  - type: Scalpel # GoobStation
+  - type: Scalpel # Shitmed
     speed: 0.65
-  - type: SurgeryTool # GoobStation
+  - type: SurgeryTool # Shitmed
     startSound:
       path: /Audio/_Shitmed/Medical/Surgery/scalpel1.ogg
     endSound:
@@ -96,9 +96,9 @@
   - type: ThrowingAngle
     angle: 315
   # end imp edits #
-  - type: Scalpel # GoobStation
+  - type: Scalpel # Shitmed
     speed: 0.3
-  - type: BoneSaw # GoobStation: Better than tg 25% because its a cleaver its meant to hack off limbs
+  - type: BoneSaw # Shitmed: Better than tg 25% because its a cleaver its meant to hack off limbs
     speed: 0.5
 
 - type: entity
