--- a/Resources/Prototypes/Entities/Clothing/Shoes/specific.yml
+++ b/Resources/Prototypes/Entities/Clothing/Shoes/specific.yml
@@ -265,6 +265,9 @@
   name: roller skates
   description: "Get your skates on!"
   components:
+  - type: Tag #impstation: for jackskates recipe
+    tags:
+    - RollerSkates
   - type: Sprite
     sprite: Clothing/Shoes/Specific/skates.rsi
   - type: Clothing
