--- a/Resources/Prototypes/tags.yml
+++ b/Resources/Prototypes/tags.yml
@@ -438,6 +438,12 @@
   id: ClockworkGlassShard
 
 - type: Tag
+  id: JackBoots #impstation: for jackskates recipe
+
+- type: Tag
+  id: RollerSkates #impstation: for jackskates recipe
+
+- type: Tag
   id: ClothMade
 
 - type: Tag
@@ -484,7 +490,7 @@
 
 - type: Tag
   id: CottonBoll
-
+  
 - type: Tag
   id: Cow
 
@@ -739,9 +745,6 @@
 
 - type: Tag
   id: HudSecurity
-
-- type: Tag
-  id: GlassesSecurity
 
 - type: Tag
   id: GuideEmbeded
@@ -1141,9 +1144,6 @@
   id: Plunger
 
 - type: Tag
-  id: PlushieCarp
-
-- type: Tag
   id: PlushieGhost
 
 - type: Tag
@@ -1272,9 +1272,6 @@
 
 - type: Tag
   id: ShellShotgun
-
-- type: Tag
-  id: ShellShotgunLight # shotgun shells that are compatible with the flare gun.
 
 - type: Tag
   id: Shiv
