--- a/Resources/Prototypes/tags.yml
+++ b/Resources/Prototypes/tags.yml
@@ -747,6 +747,9 @@
   id: HudSecurity
 
 - type: Tag
+  id: GlassesSecurity
+
+- type: Tag
   id: GuideEmbeded
 
 - type: Tag
@@ -1144,6 +1147,9 @@
   id: Plunger
 
 - type: Tag
+  id: PlushieCarp
+
+- type: Tag
   id: PlushieGhost
 
 - type: Tag
@@ -1272,6 +1278,9 @@
 
 - type: Tag
   id: ShellShotgun
+
+- type: Tag
+  id: ShellShotgunLight # shotgun shells that are compatible with the flare gun.
 
 - type: Tag
   id: Shiv
