Monument adjustments, UI testing, entropy mote insertion

--- a/Resources/Prototypes/_Impstation/CosmicCult/Objects/cosmicsword.yml
+++ b/Resources/Prototypes/_Impstation/CosmicCult/Objects/cosmicsword.yml
@@ -11,6 +11,7 @@
       - state: icon-overlay
         shader: unshaded
   - type: MeleeWeapon
+    resistanceBypass: true
     angle: 90
     animation: WeaponArcCosmic
     attackRate: 0.62
