--- a/Resources/Prototypes/Body/Parts/silicon.yml
+++ b/Resources/Prototypes/Body/Parts/silicon.yml
@@ -95,6 +95,7 @@
       left foot:
         id: "left foot"
         type: Foot
+  - type: MovementBodyPart
   - type: Sprite
     state: borg_l_leg
   - type: Icon
@@ -104,9 +105,6 @@
     - Trash
     - BorgLeg
     - BorgLLeg
-  - type: MovementBodyPart # Shitmed Change: 25% speed boost
-    walkSpeed: 3.125
-    sprintSpeed: 5.625
 
 - type: entity
   id: RightLegBorg
@@ -121,6 +119,7 @@
       right foot:
         id: "right foot"
         type: Foot
+  - type: MovementBodyPart
   - type: Sprite
     state: borg_r_leg
   - type: Icon
