--- a/Resources/Prototypes/Body/Organs/diona.yml
+++ b/Resources/Prototypes/Body/Organs/diona.yml
@@ -37,7 +37,7 @@
   - type: Sprite
     state: brain
   - type: Organ # Shitmed
-    slotId: Brain
+    slotId: brain
   - type: Brain # Shitmed
   - type: SolutionContainerManager
     solutions:
