--- a/Resources/Prototypes/_Impstation/CosmicCult/mind_roles.yml
+++ b/Resources/Prototypes/_Impstation/CosmicCult/mind_roles.yml
@@ -5,5 +5,15 @@
 #  description: mind-role-cosmiccult-description
   components:
   - type: MindRole
-    antagPrototype: CosmicCult
+    antagPrototype: CosmicAntagCultist
+  - type: CosmicCultRole
+
+- type: entity
+  parent: MindRoleCosmicCult
+  id: MindRoleCosmicCultLead
+  name: Cosmic Cult Leader Role
+#  description: mind-role-cosmiccult-description
+  components:
+  - type: MindRole
+    antagPrototype: CosmicAntagLeader
   - type: CosmicCultRole
