--- a/Resources/Prototypes/Entities/Objects/Misc/spaceshroom.yml
+++ b/Resources/Prototypes/Entities/Objects/Misc/spaceshroom.yml
@@ -101,7 +101,11 @@
     reagents:
     - Amatoxin
   - quantity: 5
-    weight: 0.1
+    weight: 1
+    reagents:
+    - MegaNocturine
+  - quantity: 5
+    weight: 0.75
     reagents:
     - Romerol
 
