--- a/Resources/Prototypes/Entities/Objects/Specific/Medical/randompill.yml
+++ b/Resources/Prototypes/Entities/Objects/Specific/Medical/randompill.yml
@@ -67,6 +67,7 @@
       weight: 10
       reagents:
       - Bleach
+      - MegaNocturine
       - CarpoToxin
       - BuzzochloricBees
       - BrosochloricBros
