--- a/Resources/Prototypes/Roles/Antags/nukeops.yml
+++ b/Resources/Prototypes/Roles/Antags/nukeops.yml
@@ -104,6 +104,7 @@
     - HandheldHealthAnalyzer
     - CombatMedipen
     - DeathAcidifierImplanter
+    - OmnimedToolSyndie # Shitmed
 
 #Lone Operative Gear
 - type: startingGear
